--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ a {
 }
 
 .mb {
-  margin-bottom: 200px;
+  margin-bottom: 100px;
 }
 
 .container{
@@ -44,6 +44,8 @@ a {
 
 .content-title {
   font-size: 5rem;
+  text-align: left;
+  margin-bottom: 40px;
 }
 
 h3 {
@@ -66,9 +68,9 @@ p {
 text
 ---------------------------------*/
 .text {
+  text-align: left;
   opacity: 0;
   transition: opacity 4s;
-  text-align: center;
   position: relative;
   z-index: 60;
 }
@@ -81,11 +83,14 @@ text
 wrapper
 ---------------------------------*/
 .wrapper {
+  width: 85%;
   opacity: 0;
   transform: translateY(100px);
   transition: opacity .4s, transform 1s;
   text-align: center;
-  margin: 100px auto;
+  margin-left: auto;
+  margin-right: auto;
+  
 }
 
 .wrapper.appear {
@@ -205,7 +210,8 @@ main
 .main-visual {
   position: relative;
   width:100%;
-  margin: 0 auto 30px auto;
+  margin-bottom: 40px;
+  /* margin: 0 auto 40px auto; */
 }
 
 .main-visual-text {
@@ -222,7 +228,7 @@ main
   left: 0px;
   bottom: 0px;
   width: 100%;
-  height: 100px;
+  height: 200px;
   overflow: hidden;
 }
 
@@ -246,33 +252,26 @@ main
 service
 ---------------------------------*/
 #service {
-  height: 600px;
+  height: 500px;
   position: relative;
-  padding: 0;
-  margin: 0 auto;
-  width: 90%;
   /* background-image: linear-gradient(#1869BC, #cdf7f7); */
   z-index: 30;
 }
 
-.service-item {
+/* .service-item {
   width: 100%;
-  height: 100%;
+  height: 100%; */
   /* background-image: linear-gradient(#fff, #cdf7f7) ; */
-  position:absolute;
+  /* position:absolute;
   top: 20px;
   left: 20px;
   z-index: 20;
-}
+} */
 
 #service .text {
-  margin-top: 30px;
-  text-align: left;
   position: absolute;
   z-index: 50;
-}
-#service .content-title {
-  margin-bottom: 40px;
+  width: 100%;
 }
 
 #service p {
@@ -294,32 +293,29 @@ service
 }
 
 .desk-work {
-  display: none;
+  width: 300px;
+  position: absolute;
+  bottom: -150px;
 }
 
 /*---------------------------------
 about
 ---------------------------------*/
 #about {
-  width: 90%;
+  position: relative;
+  margin-top: 0;
+
 }
 #about .profile {
-  margin: 0 auto;
   text-align: left;
   position: relative;
   z-index: 50;
 }
 
-#about .text {
-  text-align: left;
-}
-
 #about .name {
-  margin: 40px 0 10px 0;
   font-size: 2rem;
   color: #00005d;
 }
-
 
 .about-pic {
   width: 600px;
@@ -327,7 +323,8 @@ about
   border-radius: 50%;
   object-fit: hidden;
   position: relative;
-  top:-230px;
+  left: 100px;
+  top:-300px;
   z-index:0;
 }
 
@@ -338,12 +335,18 @@ about
   object-fit: cover;
   position: absolute;
   top: 0px;
-  right: 60px;
+  right: 0px;
   z-index: -0;
 }
 
 .dance-pic {
-  display: none;
+  margin: 0 auto;
+  width: 300px;
+  position: absolute;
+  bottom: 150px;
+  left: 0;
+  right: 500px;
+  z-index: 0;
 }
 /*---------------------------------
 works
@@ -353,54 +356,39 @@ works
 }
 
 #works .content-title {
-  color: #fff;
-  margin: 0 auto;
+  color: #1869bc;
 }
 
-#works img {
+/* #works img {
   margin: 0 auto;
   max-height: 500px;
   position: absolute;
-  top: -20px;
+  top: 0px;
   right: 0;
-  left: 0;
+  left: -50px;
   z-index:50;
-}
+} */
 
 /*---------------------------------
 contact
 ---------------------------------*/
 #contact {
-  width: 90%;
   position: relative;
   z-index: 50;
-}
-
-#contact .content-title {
-  float: left;
-  margin-bottom: 40px;
 }
 
 /*---------------------------------
 plane
 ---------------------------------*/
-/* .plane-box {
-  position: relative;
-}
-.plane-box .content-title {
-  position: relative;
-  z-index: 10;
-} */
-
 .plane {
   width: 50px;
   position: absolute;
-  top: 80px;
+  top: 280px;
   right: -50px;
   animation-name: move;
   animation-duration: 6s;
   animation-iteration-count: infinite;
-  z-index: 20;
+  z-index: 60;
 }
 @keyframes move {
   0% {
@@ -417,10 +405,10 @@ form
 
 .form-img {
   object-fit: contain;
-  width: 500px;
+  width: 100%;
   margin: 0 auto;
   position: absolute;
-  bottom: 0;
+  bottom: -100px;
   left: 0;
   right: 0;
   z-index: 40;
@@ -428,8 +416,8 @@ form
 
 .form-menu {
   position: relative;
-  z-index: 50;
-  margin: 8px auto;
+  z-index: 90;
+  margin-bottom: 8px ;
 }
 
 label {
@@ -453,8 +441,8 @@ textarea {
 }
 
 .button {
+  padding-bottom: 4px;
   width: 60px;
-  margin: 0 auto;
   border: 1px solid #1869BC;
   border-radius: 5px;
   background: #fff;
@@ -464,6 +452,7 @@ textarea {
 }
 
 .button:hover {
+  border: 1px solid #1869BC;
   background: #1869BC;
   color: #fff;
   transition-property: background;
@@ -479,7 +468,6 @@ footer
   background-color: #1869BC;
   text-align: center;
   position: relative;
-  margin-top: 200px;
   z-index: 40;
 }
 
@@ -491,7 +479,7 @@ footer
 .footer-nav ul {
   display: flex;
   justify-content: center;
-  margin: 130px;
+  margin-bottom: 130px;
   padding-top: 25px;
 }
 
@@ -557,7 +545,7 @@ footer .copy {
 
 
 /*---------------------------------
-top_down
+display-animation
 ---------------------------------*/
 
 .display-animation {
@@ -686,5 +674,3 @@ top_down
     animation-delay: 24.5s;
     opacity: 0.6;
   }
-
-  
