--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,6 @@ a {
   margin-bottom: 100px;
 }
 
-.container{
-  background-image: linear-gradient(#fff, #cdf7f7, #fff, #cdf7f7);
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-}
 
 .pc-nav {
   display: none;
@@ -65,6 +59,17 @@ p {
   padding-top: 100px;
   margin-top:  -100px;
 }
+
+/*---------------------------------
+container
+---------------------------------*/
+.container{
+  background-image: linear-gradient(#fff, #cdf7f7, #fff, #cdf7f7);
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
 
 /*---------------------------------
 text
@@ -113,7 +118,7 @@ header
   z-index: 100;
 }
 
-#header .main-logo {
+.main-logo {
   width: 200px;
   margin-top: 5px;
   margin-left: 20px;
