--- a/css/pc.css
+++ b/css/pc.css
@@ -2,6 +2,17 @@
 
 
 /*---------------------------------
+media max400
+---------------------------------*/
+@media (max-width: 450px) {
+  .main-visual-text {
+    font-size: 3.5rem;
+  }
+  .main-visual .outside::after {
+    font-size: 3.5rem;
+  }
+}
+/*---------------------------------
 media min630
 ---------------------------------*/
 @media (min-width: 630px) {
