--- a/css/mobile.css
+++ b/css/mobile.css
@@ -37,6 +37,8 @@ main-visual
   }
   .main-visual .outside::after {
     font-size: 2.5rem;
+    left: 1.5px;
+    bottom: -1.5px;
   }
 
 /*---------------------------------
@@ -57,4 +59,4 @@ footer
     margin-bottom: 0;
   }
 
-} 
+}
