--- a/css/pc.scss
+++ b/css/pc.scss
@@ -1,70 +1,72 @@
+$main-color: #1869BC;
+$text-color: #00005d;
+$bg-color: #fff;
+
 /*---------------------------------
 media min630
 ---------------------------------*/
 @media (min-width: 630px) {
-  .content-title {
-    font-size: 5.5rem;
-  }
 
-  p {
-    line-height: 1.7;
-  }
+    .content-title {
+      font-size: 5.5rem;
+    }
 
-  h3,
-.service-wrap,
-.asterisk,
-.lang,
-.profile {
-    margin-left: 40%;
-  }
+    p {
+      line-height: 1.7;
+    }
 
+    h3,
+    .service-wrap,
+    .asterisk,
+    .lang,
+    .profile {
+      margin-left: 40%;
+    }
   /*---------------------------------
   nav
   ---------------------------------*/
-  .mobile-nav {
-    display: none;
-  }
+    .mobile-nav {
+      display: none;
+    }
 
-  .pc-nav {
-    display: block;
-    margin-right: 20px;
-  }
-  .pc-nav ul {
-    display: flex;
-  }
-  .pc-nav-text {
-    display: block;
-    border-radius: 5px;
-    padding: 5px 14px;
-    margin: 3px;
-    font-size: 1rem;
-    color: #1869BC;
-    transition-property: background 0.3s ease;
-  }
-  .pc-nav a:hover {
-    background: #1869BC;
-    color: #fff;
-    transition-property: background 0.3s ease;
-  }
+    .pc-nav {
+      display: block;
+      margin-right: 20px;
+      ul {
+        display: flex;
+      }
+      &-text {
+        display: block;
+        border-radius: 5px;
+        padding: 5px 14px;
+        margin: 3px;
+        font-size: 1rem;
+        color: $main-color;
+        transition-property: background .3s ease;
+      }
+      a:hover {
+        background: $main-color;
+        color: #fff;
+        transition-property: background .3s ease;
+      }
+    }
 
   /*---------------------------------
   main_visual
   ---------------------------------*/
   .main-visual {
     max-height: 650px;
-  }
-  .main-visual-item {
-    max-height: 600px;
-    -o-object-fit: cover;
-       object-fit: cover;
-    -o-object-position: top left;
-       object-position: top left;
-  }
-  .main-visual-text {
-    font-size: 6rem;
-  }
-  .main-visual .outside::after {
-    font-size: 6rem;
+    &-item {
+      max-height: 600px;
+      object-fit: cover;
+      object-position: top left;
+    }
+    &-text {
+      font-size: 6rem;
+    }
+    .outside::after {
+      font-size: 6rem;
+    }
   }
 
   /*---------------------------------
@@ -81,6 +83,7 @@ media min630
   /*---------------------------------
   about
   ---------------------------------*/
+
   #about {
     position: relative;
   }
@@ -117,11 +120,6 @@ media min630
   /*---------------------------------
   plane
   ---------------------------------*/
-  @-webkit-keyframes move {
-    100% {
-      transform: translate(-1100px, -200px);
-    }
-  }
   @keyframes move {
     100% {
       transform: translate(-1100px, -200px);
@@ -130,8 +128,7 @@ media min630
   .plane {
     width: 60px;
     top: 150px;
-    -webkit-animation-duration: 7s;
-            animation-duration: 7s;
+    animation-duration: 7s;
   }
 
   /*---------------------------------
@@ -140,11 +137,10 @@ media min630
   .form-img {
     width: 600px;
   }
-
-  input[type=text],
-input[type=email],
-textarea,
-button {
+  input[type="text"],
+  input[type="email"],
+  textarea,
+  button {
     width: 60%;
   }
 
@@ -162,4 +158,3 @@ button {
     width: 80px;
   }
 }
-/*# sourceMappingURL=pc.css.map */
