--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,6 @@
-@charset "utf-8";
-
 /*---------------------------------
 common
 ---------------------------------*/
-
 html {
   font-size: 100%;
 }
@@ -12,9 +9,9 @@ body {
   width: 100%;
   color: #1869BC;
   margin: 0;
-  font-family: 'Kalam', cursive;
-  font-family: 'Short Stack', cursive;
-  font-family: 'Klee One', cursive;
+  font-family: "Kalam", cursive;
+  font-family: "Short Stack", cursive;
+  font-family: "Klee One", cursive;
 }
 
 img {
@@ -33,11 +30,6 @@ a {
   margin-bottom: 100px;
 }
 
-
-.pc-nav {
-  display: none;
-}
-
 .content-title {
   font-size: 5rem;
   text-align: left;
@@ -48,7 +40,7 @@ a {
 
 h3 {
   font-size: 1.5rem;
-  padding-bottom: 10px; 
+  padding-bottom: 10px;
 }
 
 p {
@@ -57,22 +49,20 @@ p {
   font-size: 1rem;
 }
 
-
 #service, #about, #works, #contact {
   padding-top: 100px;
-  margin-top:  -100px;
+  margin-top: -100px;
 }
 
 /*---------------------------------
 container
 ---------------------------------*/
-.container{
+.container {
   background-image: linear-gradient(#fff, #cdf7f7, #fff, #cdf7f7);
   height: 100%;
   position: relative;
   overflow: hidden;
 }
-
 
 /*---------------------------------
 text
@@ -96,10 +86,9 @@ wrapper
   width: 85%;
   opacity: 0;
   transform: translateY(100px);
-  transition: opacity .4s, transform 1s;
+  transition: opacity 0.4s, transform 1s;
   margin-left: auto;
   margin-right: auto;
-  
 }
 
 .wrapper.appear {
@@ -134,7 +123,7 @@ header
 
 .site-title {
   margin-bottom: 2px;
-  color: #1869bc;
+  color: #1869BC;
 }
 
 .mobile-nav {
@@ -152,36 +141,34 @@ hamburger menu
 ---------------------------------*/
 .overlay {
   position: fixed;
-  top:0;
+  top: 0;
   bottom: 0;
   right: 0;
   left: 0;
-  background: rgba(255, 255 ,255, 0.9);
+  background: rgba(255, 255, 255, 0.9);
   text-align: center;
-  padding:64px;
+  padding: 64px;
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.7s;
 }
-
 .overlay a:hover {
   text-decoration: underline;
-  opacity: .6;
-  transition-property: background;
-  transition:opacity .4s;
+  opacity: 0.6;
+  transition: background 0.4s;
 }
-
 .overlay a {
   opacity: 1;
-  transition-property: background;
-  transition:opacity .4s;
+  transition: background 0.4s;
 }
-
 .overlay.show {
   opacity: 1;
   pointer-events: auto;
 }
-
+.overlay.show li {
+  opacity: 1;
+  transform: none;
+}
 .overlay #close {
   position: absolute;
   top: 16px;
@@ -189,38 +176,39 @@ hamburger menu
   font-size: 32px;
   cursor: pointer;
 }
-
-.overlay ul {
+.overlay .close-nav {
   margin: 0;
   padding: 0;
 }
-
 .overlay li {
   margin-top: 24px;
   opacity: 0;
   transform: translateY(16px);
-  transition: opacity .3s, transform .3s;
-}
-
-.overlay.show li {
-  opacity: 1;
-  transform: none;
+  transition: opacity 0.3s, transform 0.3s;
 }
 
 .overlay.show li:nth-child(1) {
-  transition-delay: .1s;
+  transition-delay: 0.1s;
 }
+
 .overlay.show li:nth-child(2) {
-  transition-delay: .2s;
+  transition-delay: 0.2s;
 }
+
 .overlay.show li:nth-child(3) {
-  transition-delay: .3s;
+  transition-delay: 0.3s;
 }
+
 .overlay.show li:nth-child(4) {
-  transition-delay: .4s;
+  transition-delay: 0.4s;
 }
+
 .overlay.show li:nth-child(5) {
-  transition-delay: .5s;
+  transition-delay: 0.5s;
+}
+
+.pc-nav {
+  display: none;
 }
 
 /*---------------------------------
@@ -229,10 +217,9 @@ main
 /* outer */
 .main-visual {
   position: relative;
-  width:100%;
+  width: 100%;
   margin-bottom: 60px;
 }
-
 .main-visual-text {
   font-size: 4.5rem;
   color: #fff;
@@ -241,7 +228,12 @@ main
   bottom: 0;
   z-index: 30;
 }
-
+.main-visual-item {
+  margin-top: 50px;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
 .main-visual .outside {
   position: absolute;
   left: 0px;
@@ -250,56 +242,43 @@ main
   height: 200px;
   overflow: hidden;
 }
-
 .main-visual .outside::after {
   position: absolute;
   left: 3px;
   bottom: -3px;
   content: "Let's move on";
   font-size: 4.5rem;
-  color: #1869bc;
+  color: #1869BC;
   z-index: 20;
-}
-
-.main-visual-item {
-  margin-top: 50px;
-  width: 100%;
-  object-fit: contain;
 }
 
 /*---------------------------------
 service
 ---------------------------------*/
 #service {
-
   position: relative;
   z-index: 30;
 }
-
-#service h3 {
-  margin-top: -10px;
-}
-
-#service .text {
+#service .text-wrap {
   position: relative;
   z-index: 50;
   width: 100%;
 }
-
-#service p {
+#service .content-item {
+  margin-top: -10px;
+}
+#service .item-text {
   margin-bottom: 40px;
 }
 
 .service-wrap {
   display: flex;
 }
-
 .service-wrap p {
   width: 150px;
   margin-right: 30px;
 }
-
-#service .lang {
+.service-wrap .lang {
   margin-bottom: 30px;
 }
 
@@ -317,18 +296,6 @@ about
 #about {
   position: relative;
 }
-
-.about-bg {
-  background: #fff;
-  opacity: 0.1;
-}
-
-#about .profile {
-  text-align: left;
-  position: relative;
-  z-index: 50;
-}
-
 #about .name {
   font-size: 2rem;
   color: #00005d;
@@ -336,31 +303,40 @@ about
   margin-bottom: 15px;
 }
 
-#about p {
-  margin-bottom:15px;
+.profile {
+  text-align: left;
+  position: relative;
+  z-index: 50;
+  margin-bottom: 15px;
+}
+
+.about-bg {
+  background: #fff;
+  opacity: 0.1;
 }
 
 .about-pic {
   width: 600px;
   margin: 0 auto;
   border-radius: 50%;
-  object-fit: hidden;
+  -o-object-fit: hidden;
+     object-fit: hidden;
   position: relative;
   left: 100px;
-  top:-300px;
-  z-index:0;
+  top: -300px;
+  z-index: 0;
 }
 
 .sky-pic {
   width: 600px;
   max-height: 600px;
   border-radius: 50%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   position: absolute;
   top: 0px;
   right: 0px;
-  z-index: -0;
-
+  z-index: 0;
 }
 
 .dance-pic {
@@ -372,6 +348,7 @@ about
   right: 500px;
   z-index: 0;
 }
+
 /*---------------------------------
 works
 ---------------------------------*/
@@ -379,33 +356,31 @@ works
   position: relative;
   z-index: 30;
 }
-
 #works .content-title {
-  color: #1869bc;
+  color: #1869BC;
 }
 
 .works-wrapper {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
+
 .works-item-wrap {
   width: 45%;
   height: 45%;
-  object-fit: cover;
-  overflow: hidden;
+  text-align: center;
+  transition-duration: 0.2s;
 }
-.works-item {
-  transition-duration: .2s;
-}
-.works-item:hover {
-  opacity: .7;
-  transition-duration: .2s;
+.works-item-wrap:hover {
+  opacity: 0.7;
+  transition-duration: 0.2s;
 }
 
 .works-item-title {
   margin-bottom: 5px;
-  text-align: center;
 }
+
 /*---------------------------------
 contact
 ---------------------------------*/
@@ -417,22 +392,10 @@ contact
 /*---------------------------------
 form
 ---------------------------------*/
-
-.form-img {
-  object-fit: contain;
-  width: 100%;
-  margin: 0 auto;
-  position: absolute;
-  bottom: -100px;
-  left: 0;
-  right: 0;
-  z-index: 40;
-}
-
 .form-menu {
   position: relative;
   z-index: 90;
-  margin-bottom: 8px ;
+  margin-bottom: 8px;
 }
 
 label {
@@ -440,85 +403,99 @@ label {
   display: block;
 }
 
-input[type="text"],
-input[type="email"],
+input[type=text],
+input[type=email],
 textarea {
-  background: rgba(255, 255, 255, .4);
-  border: 2px solid #fff;
+  background: rgba(255, 255, 255, 0.4);
+  border: solid 1px #1968BC;
   border-radius: 5px;
   width: 100%;
-  border: solid 1px #1968BC;
 }
 
 textarea {
   height: 6rem;
 }
 
-button .mail {
-  padding-right: 15px;
-}
-
-
 button {
   width: 100%;
-  background: #1869bc;
+  background: #1869BC;
   color: #fff;
   border-radius: 5px;
-  border: none;
   position: relative;
   height: 50px;
   font-size: 1.4rem;
-  cursor: pointer;
-  transition: .5s ease all;
-  outline: none;
+  transition: 0.5s ease all;
+}
+button .mail {
+  padding-right: 15px;
 }
 button:hover {
   background: #fff;
-  color: #1869bc;
+  color: #1869BC;
 }
-
+button:hover:before {
+  width: 100%;
+  transition: 0.5s ease 0.2s all;
+}
+button:hover::after {
+  -webkit-animation: arrow 1.2s 0.7s infinite;
+          animation: arrow 1.2s 0.7s infinite;
+}
 button:before {
-  content: '';
+  content: "";
   position: absolute;
   right: 0;
   height: 3px;
   width: 0;
-  background: #1869bc;
+  background: #1869BC;
   top: inherit;
   left: 0;
   bottom: 0;
 }
-button:hover:before {
-  width: 100%;
-  transition: .5s ease .2s all;
-}
-
 button::after {
+  content: "";
   position: absolute;
   top: 50%;
-  right: .8rem;
-  content: '';
+  right: 0.8rem;
   margin-top: -5px;
   border: 7px solid transparent;
   border-top-width: 5px;
   border-bottom-width: 5px;
-  border-left-color: #1869bc;
+  border-left-color: #1869BC;
   opacity: 0;
 }
-button:hover::after {
-  animation: arrow 1.2s infinite;
-  animation-delay: .7s;
-}
-@keyframes arrow {
+
+@-webkit-keyframes arrow {
   50% {
-    right: .2em;
+    right: 0.2em;
     opacity: 1;
   }
-
   100% {
-    right: -.4em;
+    right: -0.4em;
     opacity: 0;
   }
+}
+
+@keyframes arrow {
+  50% {
+    right: 0.2em;
+    opacity: 1;
+  }
+  100% {
+    right: -0.4em;
+    opacity: 0;
+  }
+}
+.form-img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  max-width: 100%;
+  margin: 0 auto;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  right: 0;
+  z-index: 40;
 }
 
 /*---------------------------------
@@ -529,12 +506,12 @@ plane
   position: absolute;
   top: 280px;
   right: -50px;
-  animation-name: move;
-  animation-duration: 6s;
-  animation-iteration-count: infinite;
+  -webkit-animation: move 6s infinite;
+          animation: move 6s infinite;
   z-index: 100;
 }
-@keyframes move {
+
+@-webkit-keyframes move {
   0% {
     transform: none;
   }
@@ -543,6 +520,14 @@ plane
   }
 }
 
+@keyframes move {
+  0% {
+    transform: none;
+  }
+  100% {
+    transform: translate(-700px, -150px);
+  }
+}
 /*---------------------------------
 footer
 ---------------------------------*/
@@ -554,55 +539,59 @@ footer
   z-index: 40;
 }
 
-#footer p {
-  margin: 0;
-  color: #fff;
-}
-
-.footer-nav ul {
+.footer-nav {
   display: flex;
   justify-content: center;
   margin-bottom: 130px;
   padding-top: 25px;
 }
 
-.footer-nav a {
+.nav-text {
   padding: 5px 20px;
   margin: 0 3px;
   font-size: 1rem;
   color: #fff;
   border-radius: 5px;
-  transition-property: background;
-  transition-duration: .3s;
-  transition-timing-function: ease;
+  transition: background 0.3s ease;
 }
-
-.footer-nav a:hover {
+.nav-text:hover {
   background: #fff;
   color: #1869BC;
-  transition-property: background;
-  transition-duration: .3s;
-  transition-timing-function: ease;
+  transition: background 0.3s ease;
+}
+
+@-webkit-keyframes sunflower {
+  0% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(15deg);
+  }
 }
 
 @keyframes sunflower {
-  0% {transform: rotate(-15deg);}
-  100% {transform: rotate(15deg);}
+  0% {
+    transform: rotate(-15deg);
+  }
+  100% {
+    transform: rotate(15deg);
+  }
 }
-.footer-main {
-  animation:sunflower 2s linear infinite alternate;
+.footer-icon-move {
+  -webkit-animation: sunflower 2s linear infinite alternate;
+          animation: sunflower 2s linear infinite alternate;
 }
-.footer-hover {
+
+.icon-hover {
   opacity: 0;
   transition: 0.3s ease;
-  animation:sunflower 2s linear infinite alternate;
 }
-.footer-hover:hover {
+.icon-hover:hover {
   transition: 0.3s ease;
   opacity: 1;
 }
 
-.footer-top p {
+.icon-text {
   font-size: 1.2rem;
   color: #fff;
   position: absolute;
@@ -612,7 +601,7 @@ footer
   z-index: 20;
 }
 
-.footer-top a {
+.sunflower {
   width: 5.5rem;
   margin: 0 auto;
   position: absolute;
@@ -622,18 +611,17 @@ footer
   z-index: 10;
 }
 
-footer .copy {
+.copy {
   padding-bottom: 5px;
+  color: #fff;
 }
-
 
 /*---------------------------------
 display-animation
 ---------------------------------*/
-
 .display-animation {
   width: 100%;
-  height:90%;
+  height: 90%;
   position: absolute;
   top: 300px;
   right: 0;
@@ -642,12 +630,11 @@ display-animation
   display: flex;
   justify-content: space-between;
 }
-
 .display-animation li {
   position: absolute;
   margin: 0 auto;
   top: -370px;
-  list-style:none;
+  list-style: none;
   z-index: 20;
 }
 
@@ -655,133 +642,180 @@ display-animation
   width: 60px;
 }
 
-@keyframes fall {
+@-webkit-keyframes fall {
   to {
     top: 100%;
   }
 }
 
+@keyframes fall {
+  to {
+    top: 100%;
+  }
+}
+@-webkit-keyframes sway1 {
+  from {
+    transform: translateX(0px) rotate(0deg);
+  }
+  to {
+    transform: translateX(100px) rotate(-60deg);
+  }
+}
 @keyframes sway1 {
   from {
-    transform: translateX(0px)
-    rotate(0deg);
+    transform: translateX(0px) rotate(0deg);
   }
-    to {
-      transform: translateX(100px)
-      rotate(-60deg);
-    }
+  to {
+    transform: translateX(100px) rotate(-60deg);
   }
-  @keyframes sway2 {
-    from {
-      transform: translateX(100px)
-      rotate(60deg);
-    }
-    to {
-      transform: translateX(0px)
-      rotate(0deg);
-    }
+}
+@-webkit-keyframes sway2 {
+  from {
+    transform: translateX(100px) rotate(60deg);
   }
-
-  @keyframes fade {
-    0% {
-      opacity: .4;
-    }
-    20% {
-      opacity: .6;
-    }
-    45% {
-      opacity: .5;
-    }
-    50% {
-      opacity: .7;
-    }
-    65% {
-      opacity: .5
-    }
-    75% {
-      opacity: .4;
-    }
-    85% {
-      opacity: 0;
-    }
-    100% {
-      opacity: 0;
-    }
+  to {
+    transform: translateX(0px) rotate(0deg);
   }
-
-  .display-animation li:nth-child() {
-    display: none;
+}
+@keyframes sway2 {
+  from {
+    transform: translateX(100px) rotate(60deg);
   }
-  .display-animation li:nth-child(1) {
-    left: 0%;
-    animation: fall 27s linear infinite,
-    fade 27s ease infinite,
-    sway1 3s ease-in-out infinite alternate;
-    animation-delay: 0s;
+  to {
+    transform: translateX(0px) rotate(0deg);
+  }
+}
+@-webkit-keyframes fade {
+  0% {
+    opacity: 0.4;
+  }
+  20% {
     opacity: 0.6;
   }
-  .display-animation li:nth-child(2) {
-    left:10%;
-    animation: fall 31s linear infinite,
-    fade 31s ease infinite,
-    sway2 2s ease-in-out infinite alternate;
-    animation-delay: 7s;
+  45% {
+    opacity: 0.5;
   }
-  .display-animation li:nth-child(3) {
-    left: 20%;
-    animation: fall 26s linear infinite,
-    fade 26s ease infinite,
-    sway1 4s ease-in-out infinite alternate;
-    animation-delay: 12s;
-  }
-  .display-animation li:nth-child(4) {
-    left: 25%;
-    animation: fall 30s linear infinite,
-    fade 30s ease infinite,
-    sway2 5s ease-in-out infinite alternate;
-    animation-delay: 17s;
-  }
-  .display-animation li:nth-child(5) {
-    left: 35%;
-    animation: fall 28s linear infinite,
-    fade 28s ease infinite,
-    sway2 2s ease-in-out infinite alternate;
-    animation-delay: 22s;
+  50% {
     opacity: 0.7;
   }
+  65% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.4;
+  }
+  85% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes fade {
+  0% {
+    opacity: 0.4;
+  }
+  20% {
+    opacity: 0.6;
+  }
+  45% {
+    opacity: 0.5;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  65% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.4;
+  }
+  85% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.display-animation li:nth-child(1) {
+  left: 0%;
+  -webkit-animation: fall 27s linear infinite, fade 27s ease infinite, sway1 3s ease-in-out infinite alternate;
+          animation: fall 27s linear infinite, fade 27s ease infinite, sway1 3s ease-in-out infinite alternate;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+  opacity: 0.6;
+}
 
-  .display-animation li:nth-child(6) {
-    left: 50%;
-    animation: fall 30s linear infinite,
-    fade 30s ease infinite,
-    sway2 3s ease-in-out infinite alternate;
-    animation-delay: 3.5s;
-  }
-  .display-animation li:nth-child(7) {
-    left:65%;
-    animation: fall 26s linear infinite,
-    fade 26s ease infinite,
-    sway1 3s ease-in-out infinite alternate;
-    animation-delay: 9.5s;
-  }
-  .display-animation li:nth-child(8) {
-    left: 75%;
-    animation: fall 26s linear infinite,
-    fade 26s ease infinite,
-    sway2 3s ease-in-out infinite alternate;
-    animation-delay: 14.5s;
-  }
-  .display-animation li:nth-child(9) {
-    left: 80%;
-    animation: fall 27s linear infinite,
-    fade 27s ease infinite,
-    sway1 3s ease-in-out infinite alternate;
-    animation-delay: 19.5s;
-  }
-  .display-animation li:nth-child(10) {
-    left: 90%;
-    animation: fall 28s linear infinite,
-    fade 28s ease infinite,
-    sway2 3s ease-in-out infinite alternate;
-    animation-delay: 24.5s;
-  }
+.display-animation li:nth-child(2) {
+  left: 10%;
+  -webkit-animation: fall 31s linear infinite, fade 31s ease infinite, sway2 2s ease-in-out infinite alternate;
+          animation: fall 31s linear infinite, fade 31s ease infinite, sway2 2s ease-in-out infinite alternate;
+  -webkit-animation-delay: 7s;
+          animation-delay: 7s;
+}
+
+.display-animation li:nth-child(3) {
+  left: 20%;
+  -webkit-animation: fall 26s linear infinite, fade 26s ease infinite, sway1 4s ease-in-out infinite alternate;
+          animation: fall 26s linear infinite, fade 26s ease infinite, sway1 4s ease-in-out infinite alternate;
+  -webkit-animation-delay: 12s;
+          animation-delay: 12s;
+}
+
+.display-animation li:nth-child(4) {
+  left: 25%;
+  -webkit-animation: fall 30s linear infinite, fade 30s ease infinite, sway2 5s ease-in-out infinite alternate;
+          animation: fall 30s linear infinite, fade 30s ease infinite, sway2 5s ease-in-out infinite alternate;
+  -webkit-animation-delay: 17s;
+          animation-delay: 17s;
+}
+
+.display-animation li:nth-child(5) {
+  left: 35%;
+  -webkit-animation: fall 28s linear infinite, fade 28s ease infinite, sway2 2s ease-in-out infinite alternate;
+          animation: fall 28s linear infinite, fade 28s ease infinite, sway2 2s ease-in-out infinite alternate;
+  -webkit-animation-delay: 22s;
+          animation-delay: 22s;
+  opacity: 0.7;
+}
+
+.display-animation li:nth-child(6) {
+  left: 50%;
+  -webkit-animation: fall 30s linear infinite, fade 30s ease infinite, sway2 3s ease-in-out infinite alternate;
+          animation: fall 30s linear infinite, fade 30s ease infinite, sway2 3s ease-in-out infinite alternate;
+  -webkit-animation-delay: 3.5s;
+          animation-delay: 3.5s;
+}
+
+.display-animation li:nth-child(7) {
+  left: 65%;
+  -webkit-animation: fall 26s linear infinite, fade 26s ease infinite, sway1 3s ease-in-out infinite alternate;
+          animation: fall 26s linear infinite, fade 26s ease infinite, sway1 3s ease-in-out infinite alternate;
+  -webkit-animation-delay: 9.5s;
+          animation-delay: 9.5s;
+}
+
+.display-animation li:nth-child(8) {
+  left: 75%;
+  -webkit-animation: fall 26s linear infinite, fade 26s ease infinite, sway2 3s ease-in-out infinite alternate;
+          animation: fall 26s linear infinite, fade 26s ease infinite, sway2 3s ease-in-out infinite alternate;
+  -webkit-animation-delay: 14.5s;
+          animation-delay: 14.5s;
+}
+
+.display-animation li:nth-child(9) {
+  left: 80%;
+  -webkit-animation: fall 27s linear infinite, fade 27s ease infinite, sway1 3s ease-in-out infinite alternate;
+          animation: fall 27s linear infinite, fade 27s ease infinite, sway1 3s ease-in-out infinite alternate;
+  -webkit-animation-delay: 19.5s;
+          animation-delay: 19.5s;
+}
+
+.display-animation li:nth-child(10) {
+  left: 90%;
+  -webkit-animation: fall 28s linear infinite, fade 28s ease infinite, sway2 3s ease-in-out infinite alternate;
+          animation: fall 28s linear infinite, fade 28s ease infinite, sway2 3s ease-in-out infinite alternate;
+  -webkit-animation-delay: 24.5s;
+          animation-delay: 24.5s;
+}
+/*# sourceMappingURL=style.css.map */
