--- a/css/mobile/mobile.scss
+++ b/css/mobile/mobile.scss
@@ -1,7 +1,9 @@
+
 /*---------------------------------
 media max400
 ---------------------------------*/
 @media (max-width: 450px) {
+
   .content-title {
     font-size: 3rem;
     margin-bottom: 20px;
@@ -15,49 +17,48 @@ media max400
     font-size: 0.8rem;
   }
 
-  /*---------------------------------
-  header
-  ---------------------------------*/
+/*---------------------------------
+header
+---------------------------------*/
   .main-logo {
     margin-left: 10px;
   }
-
   .mobile-nav {
     margin-right: 14px;
   }
-
-  /*---------------------------------
-  main-visual
-  ---------------------------------*/
-  .main-visual {
-    margin-bottom: 30px;
-  }
-  .main-visual-text {
+/*---------------------------------
+main-visual
+---------------------------------*/
+.main-visual {
+  margin-bottom: 30px;
+  &-text {
     font-size: 3rem;
   }
-  .main-visual .outside::after {
+  .outside::after {
     font-size: 3rem;
     left: 1.5px;
     bottom: -1.5px;
   }
+}
 
-  /*---------------------------------
-  about
-  ---------------------------------*/
-  #about .name {
+/*---------------------------------
+about
+---------------------------------*/
+#about {
+  .name {
     font-size: 1.2rem;
   }
-  #about .dance-pic {
+  .dance-pic {
     top: 130px;
   }
-
-  /*---------------------------------
-  footer
-  ---------------------------------*/
+} 
+/*---------------------------------
+footer
+---------------------------------*/
   #footer {
     font-size: 1rem;
     padding-bottom: 0;
     margin-bottom: 0;
   }
+
 }
-/*# sourceMappingURL=mobile.css.map */
